--- a/ionic-basic/src/app/detalle-receta/detalle-receta.page.html
+++ b/ionic-basic/src/app/detalle-receta/detalle-receta.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar style="margin-top: 50px;">
     <ion-title>Detalle Receta</ion-title>
     <ion-back-button defaulthref="receta"></ion-back-button>
     <ion-title>{{receta.nombre}}</ion-title>
