--- a/ionic-basic/src/theme/variables.scss
+++ b/ionic-basic/src/theme/variables.scss
@@ -229,6 +229,8 @@
 
     --ion-toolbar-background: #1f1f1f;
 
+    --ion-toolbar-background: var(--ion-color-secondary);
+    
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
