--- a/ionic-basic/src/app/reciever/reciever.page.html
+++ b/ionic-basic/src/app/reciever/reciever.page.html
@@ -2,8 +2,14 @@
   <ion-toolbar>
     <ion-title>reciever</ion-title>
   </ion-toolbar>
+  <ion-back-button defaultHref="inicio"></ion-back-button>
 </ion-header>
 
 <ion-content>
+  <p>
+    {{user | json}}
+  </p>
+  <p>{{list | json}}</p>
 
+  <p>{{personajes | json}}</p>
 </ion-content>
