--- a/ionic-basic/src/app/detalle-receta/detalle-receta.page.html
+++ b/ionic-basic/src/app/detalle-receta/detalle-receta.page.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>detalle-receta</ion-title>
-    <ion-back-button defaultHref="/receta"></ion-back-button>
-    <ion-title>{{receta.nombre}}</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+    <ion-toolbar style="margin-top: 50px;">
+      <ion-title>Detalle Receta</ion-title>
+      <ion-back-button defaulthref="receta"></ion-back-button>
+      <ion-title>{{receta.nombre}}</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
 <ion-content>
   <ion-grid>
     <ion-row>
