--- a/ionic-basic/src/app/home/home.page.html
+++ b/ionic-basic/src/app/home/home.page.html
@@ -1,5 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+  <ion-toolbar style="margin-top:40px;">
     <ion-title>
       Blank
     </ion-title>
@@ -18,3 +19,6 @@
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
+  <ion-button size="large" (click)="onLogout()">Logout</ion-button>
+  <ion-button *ngIf="isLoged" size="large" routerLink="/admin">Admin</ion-button>
+</ion-content> 
