--- a/ionic-basic/src/app/componentes/float-menu/float-menu.component.html
+++ b/ionic-basic/src/app/componentes/float-menu/float-menu.component.html
@@ -1,22 +1,23 @@
+
 <ion-header>
-    <ion-toolbar color="secondary">
+  <ion-toolbar color="secondary">
       <ion-buttons slot="start">
-        <ion-menu-button></ion-menu-button>
+          <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      
-      <ion-title>Menu Principal</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  
-  <ion-menu side="start" content-id="main">
-    <ion-content id="menuFloat">
+
+      <ion-title>{{titleMenu}}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-menu side="start" content-id="main" (ionWillOpen)="onMenuOpen()">
+  <ion-content id="menuFloat">
       <ion-list>
-        <ion-menu-toggle *ngFor="let option of datosMenu">
-          <ion-item (click)="navegar(option.enlace)">
-            <ion-icon name="{{option.icono}}"></ion-icon>
-            <ion-label>{{option.nombre}}</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
+          <ion-menu-toggle *ngFor="let c of datosMenu">
+              <ion-item (click)="navegar(c.enlace, c.nombre)">
+                  <ion-icon name='{{c.icono}}'></ion-icon>
+                  <ion-label>{{ c.nombre }}</ion-label>
+              </ion-item>
+          </ion-menu-toggle>
       </ion-list>
-    </ion-content>
-  </ion-menu>
+  </ion-content>
+</ion-menu>
