--- a/ionic-basic/src/app/destinos/destinos.page.html
+++ b/ionic-basic/src/app/destinos/destinos.page.html
@@ -19,7 +19,6 @@
             <ion-button *ngIf="editando" type="button" color="danger" size="larger" (click)="cancelarEdicion()">Cancelar</ion-button>
         </ion-item-divider>
     </form>
-
     <ion-item-divider></ion-item-divider>
     <ion-grid>
         <ion-row>
@@ -34,10 +33,8 @@
                 </ion-text>
             </ion-col>
             <ion-col>
-
             </ion-col>
             <ion-col>
-
             </ion-col>
         </ion-row>
         <ion-row *ngFor="let lugar of destinos">
@@ -47,8 +44,10 @@
                 </ion-text>
             </ion-col>
             <ion-col>
-                <ion-text>
-                    {{lugar.ubicacion}}
+                <ion-text *ngIf="lugar.latitud">
+                    latitud: {{lugar.latitud}} ,longitud{{lugar.longitud}}
+                </ion-text>
+                <ion-text *ngIf="!lugar.latitud">
                 </ion-text>
             </ion-col>
             <ion-col>
@@ -59,4 +58,4 @@
             </ion-col>
         </ion-row>
     </ion-grid>
-</ion-content> 
+</ion-content>
