--- a/ionic-basic/src/app/inicio/inicio.page.html
+++ b/ionic-basic/src/app/inicio/inicio.page.html
@@ -8,7 +8,7 @@
     <ion-list>
       <ion-item>
         <ion-button (click)="gotReceiver()">
-          ir a reciever
+          Reciever
         </ion-button>
       </ion-item>
     </ion-list>
