--- a/ionic-basic/src/app/reciever/reciever.page.html
+++ b/ionic-basic/src/app/reciever/reciever.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-      <ion-title>reciever</ion-title>
+      <ion-title>Reciever</ion-title>
     </ion-toolbar>
     <ion-back-button defaultHref="inicio"></ion-back-button>
   </ion-header>
@@ -8,32 +8,7 @@
   <ion-content>
     <ion-grid>
       <ion-row>
-        <ion-col>
-          User
-        </ion-col>
-        <ion-col>
-          Uuid
-        </ion-col>
-        <ion-col>
-          Email
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          {{user.nombre}}
-        </ion-col>
-        <ion-col>
-          {{user.uuid}}
-        </ion-col>
-        <ion-col>
-          {{user.email}}
-        </ion-col>    
-      </ion-row>
-    </ion-grid>
-  
-    <ion-grid>
-      <ion-row>
-        <ion-col>
+        <ion-col style="font-size: 20px;">
           User
         </ion-col>
         <ion-col>
@@ -58,22 +33,14 @@
   
     <ion-grid>
       <ion-row>
-        <ion-col>Name</ion-col>
+        <ion-col>Name </ion-col>
         <ion-col>Height</ion-col>
         <ion-col>Mass</ion-col>
-        <ion-col>Hair Color</ion-col>
-        <ion-col>Skin Color</ion-col>
-        <ion-col>Eye Color</ion-col>
-        <ion-col>Birth Year</ion-col>
+        <ion-col>Hair</ion-col>
+        <ion-col>Skin</ion-col>
+        <ion-col>Eye</ion-col>
+        <ion-col>Birth</ion-col>
         <ion-col>Gender</ion-col>
-        <ion-col>HomeWorld</ion-col>
-        <ion-col>Films</ion-col>
-        <ion-col>Species</ion-col>
-        <ion-col>Vehicles</ion-col>
-        <ion-col>Starships</ion-col>
-        <ion-col>Created</ion-col>
-        <ion-col>Edited</ion-col>
-        <ion-col>Url</ion-col>
       </ion-row>
       <ion-row *ngFor="let person of personajes">
         <ion-col>{{person.name}}</ion-col>
@@ -84,14 +51,6 @@
         <ion-col>{{person.eye_color}}</ion-col>
         <ion-col>{{person.birth_year}}</ion-col>
         <ion-col>{{person.gender}}</ion-col>
-        <ion-col>{{person.homeworld}}</ion-col>
-        <ion-col>{{person.films}}</ion-col>
-        <ion-col>{{person.species}}</ion-col>
-        <ion-col>{{person.vehicles}}</ion-col>
-        <ion-col>{{person.starships}}</ion-col>
-        <ion-col>{{person.created}}</ion-col>
-        <ion-col>{{person.edited}}</ion-col>
-        <ion-col>{{person.url}}</ion-col>
       </ion-row>
     </ion-grid>
   </ion-content>
