Practica #10: se agrego en service, alta, baja y cambio de lugar; se implemento tipo lugar en firestore database

--- a/ionic-basic/src/app/destinos/destinos.page.html
+++ b/ionic-basic/src/app/destinos/destinos.page.html
@@ -15,14 +15,6 @@
                 <h5>Campo requerido</h5>
             </ion-text>
         </ion-item>
-        <ion-item (click)="addDirection()">
-            <ion-label class="normal">Ubicación</ion-label>
-            <ion-buttons>
-                <ion-button>
-                    <ion-icon slot="icon-only" color="danger" name="location"></ion-icon>
-                </ion-button>
-            </ion-buttons>
-        </ion-item>
         <ion-item-divider>
             <ion-button type="submit" type="submit" [disabled]="!(ionicForm.valid)" color="primary" size="larger">{{estado}}</ion-button>
             <ion-button *ngIf="editando" type="button" color="danger" size="larger" (click)="cancelarEdicion()">Cancelar</ion-button>
@@ -55,12 +47,16 @@
                     {{lugar.nombre}}
                 </ion-text>
             </ion-col>
-        </ion-row>
-        <ion-row *ngFor="let lugar of destinos">
             <ion-col>
                 <ion-text>
-                    {{lugar.nombre}}
+                    {{lugar.ubicacion}}
                 </ion-text>
+            </ion-col>
+            <ion-col>
+                <ion-button color="primary" (click)="editarLugar(lugar.id, lugar)">editar</ion-button>
+            </ion-col>
+            <ion-col>
+                <ion-button color="danger" (click)="eliminarLugar(lugar.id)">borrar</ion-button>
             </ion-col>
         </ion-row>
     </ion-grid>
