--- a/ionic-basic/src/app/destinos-api/destinos-api.page.html
+++ b/ionic-basic/src/app/destinos-api/destinos-api.page.html
@@ -2,9 +2,9 @@
     <ion-toolbar color="primary">
         <ion-title>Destinos</ion-title>
     </ion-toolbar>
-</ion-header>
-
-<ion-content padding>
+  </ion-header>
+  
+  <ion-content padding>
     <form [formGroup]="ionicForm" (ngSubmit)="submitForm()" novalidate>
         <ion-item>
             <ion-label>
@@ -15,12 +15,20 @@
                 <h5>Campo requerido</h5>
             </ion-text>
         </ion-item>
+        <ion-item (click)="addDirection()">
+          <ion-label class="normal">Ubicación</ion-label>
+          <ion-buttons>
+              <ion-button>
+                  <ion-icon slot="icon-only" color="danger" name="location"></ion-icon>
+              </ion-button>
+          </ion-buttons>
+      </ion-item>    
         <ion-item-divider>
             <ion-button type="submit" type="submit" [disabled]="!(ionicForm.valid)" color="primary" size="larger">{{estado}}</ion-button>
             <ion-button *ngIf="editando" type="button" color="danger" size="larger" (click)="cancelarEdicion()">Cancelar</ion-button>
         </ion-item-divider>
     </form>
-
+  
     <ion-item-divider></ion-item-divider>
     <ion-grid>
         <ion-row>
@@ -35,23 +43,23 @@
                 </ion-text>
             </ion-col>
             <ion-col>
-
+  
             </ion-col>
             <ion-col>
-
+  
             </ion-col>
         </ion-row>
         <ion-row *ngFor="let lugar of destinos">
+            <ion-col>
+                <ion-text>
+                    {{lugar.nombre}}
+                </ion-text>
+            </ion-col>
             <ion-col>
                 <ion-text *ngIf="lugar.latitud">
                     latitud: {{lugar.latitud}} ,longitud{{lugar.longitud}}
                 </ion-text>
                 <ion-text *ngIf="!lugar.latitud">
-                </ion-text>
-            </ion-col>
-            <ion-col>
-                <ion-text>
-                    {{lugar.ubicacion}}
                 </ion-text>
             </ion-col>
             <ion-col>
@@ -62,4 +70,4 @@
             </ion-col>
         </ion-row>
     </ion-grid>
-</ion-content>
+  </ion-content>
